fix(loader): fix z-index when wrap table (#339)

--- a/projects/extensions/loader/loader.scss
+++ b/projects/extensions/loader/loader.scss
@@ -12,7 +12,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 210;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,7 +35,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 200;
   display: block;
   width: 100%;
   height: 100%;
